<resources>
    <string name="app_name">Milestone Mate</string>
    <string name="user_name_text">User Name</string>
    <string name="user_name"> </string>
    <string name="log_in_text">Log In</string>
    <string name="email_text">Email</string>
    <string name="email"> </string>
    <string name="password_text">Password</string>
    <string name="password"> </string>
    <string name="confirm_button">Confirm</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="password_text_2">Confirm Password</string>
    <string name="title">Milestone Mate</string>
    <string name="welcome_text">Welcome, %1$s!</string>
    <string name="today_todo">Today\'s ToDo</string>
    <string name="todo_title">todo title</string>
    <string name="todo_state">Incomplete</string>
    <string name="add_new_todo_button">Add New</string>
    <string name="title_text">Title</string>
    <string name="due_data_text">Due Data</string>
    <string name="title_input" />
    <string name="due_date_input" />
    <string name="submit_button">Submit</string>
    <string name="add_a_new_todo_text">Add a New ToDo</string>
    <string name="reward_points_text">Reward Points</string>
    <string name="reward_points">Reward Points: %1$d</string>

    <item name="gift_name" type="id"/>
    <item name="gift_value" type="id"/>
    <item name="gift_amount" type="id"/>
</resources>