<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/addNewTodoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="192dp"
        android:text="@string/add_a_new_todo_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_text"
        app:layout_constraintTop_toBottomOf="@+id/addNewTodoText"
        app:layout_constraintStart_toStartOf="@+id/addNewTodoText" />

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/title_input"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="@id/titleText"
        android:paddingVertical="15dp"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/due_data_text"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title" />

    <EditText
        android:id="@+id/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="@string/due_date_input"
        app:layout_constraintTop_toBottomOf="@id/dateText"
        app:layout_constraintStart_toStartOf="@id/dateText"
        android:paddingVertical="15dp"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        app:layout_constraintEnd_toEndOf="@id/dueDate"
        app:layout_constraintTop_toBottomOf="@id/dueDate"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>