<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="352dp"
        android:text="Create account!"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:text="@string/user_name_text"
        app:layout_constraintStart_toStartOf="@id/signupText"
        app:layout_constraintTop_toBottomOf="@id/signupText" />

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="40dp"

        android:layout_marginTop="8dp"
        android:background="@drawable/textborad1"
        android:ems="0"
        android:inputType="text"
        android:paddingVertical="0dp"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="@+id/userNameText"
        app:layout_constraintTop_toBottomOf="@+id/userNameText"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/email_text"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborad1"
        android:ems="0"
        android:inputType="textPassword"
        android:paddingVertical="0dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/passwordText1"
        app:layout_constraintTop_toBottomOf="@+id/passwordText1"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/passwordText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/password_text_2"
        app:layout_constraintStart_toStartOf="@id/password1"
        app:layout_constraintTop_toBottomOf="@id/password1" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/button"
        android:text="Sign In"
        app:layout_constraintEnd_toEndOf="@id/password2"
        app:layout_constraintTop_toBottomOf="@id/password2" />

    <TextView
        android:id="@+id/passwordText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/password_text"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textborad1"
        android:ems="0"
        android:inputType="textPassword"
        android:paddingVertical="0dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/passwordText2"
        app:layout_constraintTop_toBottomOf="@+id/passwordText2"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/singInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="760dp"
        android:text="Already got the account?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="760dp"

        android:text="Log In"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/textborad1"
        android:ems="0"
        android:inputType="textEmailAddress"
        android:paddingVertical="0dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        tools:ignore="Autofill,LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>